--- a/src/assets/index.bundle.css
+++ b/src/assets/index.bundle.css
@@ -742,6 +742,8 @@
 .cardlink-color-12 {background-color: #b24000!important;} /*::: Laboratório :::*/
 .cardlink-color-13 {background-color: #993600!important;} /*::: NMA :::*/
 
+.cardlink-color-14 {background-color: #0348c9!important;} /*::: JOVEM APRENDIZ :::*/
+
 .opHover:hover {opacity: 0.9;}
 
 /*teste*/
